[gd_scene load_steps=22 format=3 uid="uid://c76f1bnnr57wu"]

[ext_resource type="ArrayMesh" uid="uid://doim0agbwg3o4" path="res://Container/model/cargo_container.obj" id="1_2rmb7"]
[ext_resource type="Texture2D" uid="uid://db4eeivr2onv8" path="res://map_camp_1_spritesheet.png" id="2_sfn5j"]
[ext_resource type="Script" path="res://3dcampaignmenu.gd" id="3_eqhyj"]

[sub_resource type="BoxMesh" id="BoxMesh_ixhad"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_laser"]
transparency = 1
albedo_color = Color(0, 0.5, 1, 0.6)
emission_enabled = true
emission = Color(0, 0.5, 1, 1)
emission_energy_multiplier = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_laser"]
top_radius = 0.005
bottom_radius = 0.005
height = 10.0

[sub_resource type="SphereMesh" id="SphereMesh_cursor"]
radius = 0.02
height = 0.04
radial_segments = 8
rings = 4

[sub_resource type="AtlasTexture" id="AtlasTexture_wqndt"]
atlas = ExtResource("2_sfn5j")
region = Rect2(550, 0, 550, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_orhb8"]
atlas = ExtResource("2_sfn5j")
region = Rect2(1100, 0, 550, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd83t"]
atlas = ExtResource("2_sfn5j")
region = Rect2(2200, 0, 550, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_i46dj"]
atlas = ExtResource("2_sfn5j")
region = Rect2(0, 0, 550, 336)

[sub_resource type="SpriteFrames" id="SpriteFrames_vafnd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqndt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orhb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd83t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i46dj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n2oj3"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("2_sfn5j")
texture_filter = 0

[sub_resource type="PrismMesh" id="PrismMesh_8f2g2"]
left_to_right = 0.0
size = Vector3(0.025, 0.025, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_qmgb0"]
size = Vector3(1.5, 1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_qdbj5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_button1"]
albedo_color = Color(0.196078, 0.196078, 0.784314, 1)
metallic = 0.45
roughness = 0.55

[sub_resource type="BoxMesh" id="BoxMesh_button"]
size = Vector3(0.5, 0.1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_button"]
size = Vector3(0.5, 0.1, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_base"]
size = Vector3(0.6, 0.05, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_button2"]
albedo_color = Color(0.792157, 0.211765, 0.211765, 1)
metallic = 0.45
roughness = 0.55

[node name="Node3D" type="Node3D"]
script = ExtResource("3_eqhyj")

[node name="CargoContainer" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -8.50739, -14.939)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer" type="MeshInstance3D" parent="CargoContainer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.18096, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer2" type="MeshInstance3D" parent="CargoContainer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.74743, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer3" type="MeshInstance3D" parent="CargoContainer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.31148, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer4" type="MeshInstance3D" parent="CargoContainer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.88412, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer5" type="MeshInstance3D" parent="CargoContainer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.449595, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer6" type="MeshInstance3D" parent="CargoContainer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0200012, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer2" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -8.50739, -8.12589)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer3" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -8.50739, -1.2747)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer4" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -8.50739, 5.44147)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer5" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -8.50739, 12.2703)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer6" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -8.50739, 19.0216)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer7" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -0.822592, -14.939)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer" type="MeshInstance3D" parent="CargoContainer7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.18096, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer2" type="MeshInstance3D" parent="CargoContainer7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.74743, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer3" type="MeshInstance3D" parent="CargoContainer7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.31148, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer4" type="MeshInstance3D" parent="CargoContainer7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.88412, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer5" type="MeshInstance3D" parent="CargoContainer7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.449595, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer6" type="MeshInstance3D" parent="CargoContainer7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0200012, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer8" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -0.822592, -8.12589)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer9" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -0.822592, -1.2747)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer10" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -0.822592, 5.44147)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer11" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -0.822592, 12.2703)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer12" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, -0.822592, 19.0216)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer13" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, 6.80055, -14.939)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer" type="MeshInstance3D" parent="CargoContainer13"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.18096, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer2" type="MeshInstance3D" parent="CargoContainer13"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.74743, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer3" type="MeshInstance3D" parent="CargoContainer13"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.31148, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer4" type="MeshInstance3D" parent="CargoContainer13"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.88412, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer5" type="MeshInstance3D" parent="CargoContainer13"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.449595, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer6" type="MeshInstance3D" parent="CargoContainer13"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0200012, 0, 2.4974)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer14" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, 6.80055, -8.12589)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer15" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, 6.80055, -1.2747)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer16" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, 6.80055, 5.44147)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer17" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, 6.80055, 12.2703)
mesh = ExtResource("1_2rmb7")

[node name="CargoContainer18" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.8695e-07, 0, 16.6283, 0, 16.0547, 0, -15.7156, 0, -7.26845e-07, -9.5729, 6.80055, 19.0216)
mesh = ExtResource("1_2rmb7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(60.2125, 0, 0, 0, -0.0162779, 0, 0, 0, 40.8962, 9.71123, -9.19402, 2.23461)
mesh = SubResource("BoxMesh_ixhad")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="."]
transform = Transform3D(60.2125, 0, 0, 0, -0.0162779, 0, 0, 0, 40.8962, 9.71123, 13.9634, 2.23461)
mesh = SubResource("BoxMesh_ixhad")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(70.1926, 0, 0, 0, 6.91435e-10, -41.4748, 0, -0.0158182, -1.81292e-06, 9.71123, 11.654, 22.4555)
mesh = SubResource("BoxMesh_ixhad")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(70.7069, 0, 0, 0, 6.965e-10, -41.7787, 0, -0.015934, -1.82621e-06, 9.71123, 11.654, -18.0844)
mesh = SubResource("BoxMesh_ixhad")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1.37678e-06, -0.0168594, -1.82621e-06, 0, 7.3695e-10, -41.7787, -49.1101, 4.83946e-10, 8.55568e-14, 44.1599, 11.654, -0.883599)
mesh = SubResource("BoxMesh_ixhad")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(1.37678e-06, -0.0168594, -1.82621e-06, 0, 7.3695e-10, -41.7787, -49.1101, 4.83946e-10, 8.55568e-14, -21.1099, 11.654, -0.883599)
mesh = SubResource("BoxMesh_ixhad")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.954, -7.596, 4.236)

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="XRController3DLeft" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 1, -0.3)
tracker = &"left_hand"
pose = &"aim"

[node name="LaserBeamLeft" type="MeshInstance3D" parent="XROrigin3D/XRController3DLeft"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -5)
material_override = SubResource("StandardMaterial3D_laser")
mesh = SubResource("CylinderMesh_laser")

[node name="LaserDotLeft" type="MeshInstance3D" parent="XROrigin3D/XRController3DLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
material_override = SubResource("StandardMaterial3D_laser")
mesh = SubResource("SphereMesh_cursor")

[node name="RayCastLeft" type="RayCast3D" parent="XROrigin3D/XRController3DLeft"]
target_position = Vector3(0, 0, -10)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.501961, 1, 0.501961)

[node name="XRController3DRight" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1, -0.3)
tracker = &"right_hand"
pose = &"aim"

[node name="LaserBeamRight" type="MeshInstance3D" parent="XROrigin3D/XRController3DRight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -5)
material_override = SubResource("StandardMaterial3D_laser")
mesh = SubResource("CylinderMesh_laser")

[node name="LaserDotRight" type="MeshInstance3D" parent="XROrigin3D/XRController3DRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
material_override = SubResource("StandardMaterial3D_laser")
mesh = SubResource("SphereMesh_cursor")

[node name="RayCastRight" type="RayCast3D" parent="XROrigin3D/XRController3DRight"]
target_position = Vector3(0, 0, -10)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.501961, 1, 0.501961)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 2.03019, 0, 0, 0, 1, 10.9535, -4.59605, 4.23553)
current = true

[node name="MapDisplay" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.598372)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="MapDisplay"]
transform = Transform3D(26.5603, 0, 0, 0, 26.1307, 3.24249e-05, 0, 9.53674e-07, 82.8612, 10.9535, -3.72881, -7.76805)
pixel_size = 0.001
alpha_cut = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_vafnd")
autoplay = "default"
frame_progress = 0.456171

[node name="ExtrusionContainer" type="Node3D" parent="MapDisplay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)

[node name="PixelPrism" type="MeshInstance3D" parent="MapDisplay/ExtrusionContainer"]
visible = false
material_override = SubResource("StandardMaterial3D_n2oj3")
mesh = SubResource("PrismMesh_8f2g2")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="MapDisplay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)
use_collision = true

[node name="ExtrudedBox" type="CSGBox3D" parent="MapDisplay/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
visible = false
size = Vector3(2.2, 1.3, 0.5)
material = SubResource("StandardMaterial3D_n2oj3")

[node name="ClickableArea" type="Area3D" parent="MapDisplay" groups=["clickable"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MapDisplay/ClickableArea"]
transform = Transform3D(16.6283, 0, 0, 0, 16.0547, 0, 0, 0, 15.7156, 10.9535, -0.980032, -6.14142)
shape = SubResource("BoxShape3D_qmgb0")

[node name="Label3D" type="Label3D" parent="MapDisplay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
text = "Click to Start Voyage"
font_size = 24

[node name="MeshInstance3D6" type="MeshInstance3D" parent="."]
transform = Transform3D(15.0012, 0, 0, 0, 10.1476, -9.31323e-09, 0, -1.90735e-06, -0.0729479, 10.9535, -3.09666, -8.81867)
mesh = SubResource("BoxMesh_qdbj5")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="."]
transform = Transform3D(15.0297, 0, 0, 0, 0.430192, -4.28408e-08, 0, 2.98023e-08, -0.0774982, 11.0512, 1.88279, -8.72994)
mesh = SubResource("BoxMesh_qdbj5")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="."]
transform = Transform3D(14.5917, 0, 0, 0, 0.430192, -4.28408e-08, 0, 3.72529e-08, -0.0774982, 11.1042, -8.21329, -8.32635)
mesh = SubResource("BoxMesh_qdbj5")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.1806e-07, -0.170049, -4.20404e-09, 12.9672, 2.90368e-09, -7.45058e-08, -2.14577e-06, -1.54863e-08, -0.094658, 3.88637, -3.19673, -8.3596)
mesh = SubResource("BoxMesh_qdbj5")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.03299e-07, -0.170049, -4.23706e-09, 12.0894, 2.90368e-09, -7.82311e-08, -2.38419e-06, -1.54863e-08, -0.0954014, 18.3815, -3.19673, -8.3596)
mesh = SubResource("BoxMesh_qdbj5")

[node name="InteractiveButtons" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.954, -5, -1)

[node name="Button1" type="Area3D" parent="InteractiveButtons" groups=["button", "clickable"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1, 0, 0)

[node name="ButtonMesh" type="MeshInstance3D" parent="InteractiveButtons/Button1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
material_override = SubResource("StandardMaterial3D_button1")
mesh = SubResource("BoxMesh_button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractiveButtons/Button1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("BoxShape3D_button")

[node name="Base" type="MeshInstance3D" parent="InteractiveButtons/Button1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, 0)
mesh = SubResource("BoxMesh_base")

[node name="Label3D" type="Label3D" parent="InteractiveButtons/Button1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.15, 0)
text = "START"

[node name="Button2" type="Area3D" parent="InteractiveButtons" groups=["button", "clickable"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1, 0, 0)

[node name="ButtonMesh" type="MeshInstance3D" parent="InteractiveButtons/Button2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
material_override = SubResource("StandardMaterial3D_button2")
mesh = SubResource("BoxMesh_button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractiveButtons/Button2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("BoxShape3D_button")

[node name="Base" type="MeshInstance3D" parent="InteractiveButtons/Button2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, 0)
mesh = SubResource("BoxMesh_base")

[node name="Label3D" type="Label3D" parent="InteractiveButtons/Button2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.15, 0)
text = "QUIT"
